WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272430
REGRESSION (
274863@main
): Safari loads website content at a lower resolution with in-process layers and backdrop-filter
https://bugs.webkit.org/show_bug.cgi?id=272430
Summary
REGRESSION (274863@main): Safari loads website content at a lower resolution ...
Matt Woodrow
Reported
2024-04-09 18:39:17 PDT
rdar://123775320
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-04-09 18:41:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27060
EWS
Comment 2
2024-04-11 02:12:08 PDT
Committed
277370@main
(703822b1f44f): <
https://commits.webkit.org/277370@main
> Reviewed commits have been landed. Closing PR #27060 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug