REGRESSION (274863@main): Safari loads website content at a lower resolution with in-process layers and backdrop-filter. https://bugs.webkit.org/show_bug.cgi?id=272430 <rdar://123775320>

Reviewed by Simon Fraser.

WebTiledBackingLayer wasn't forwarding the contentScale/rasterizationScale onto the underlying CALayer,
and this value gets used when the layer forces rasterization as a backdrop root.

* LayoutTests/css3/filters/hidpi-backdrop-filter-rasterization-scale-expected.html: Added.
* LayoutTests/css3/filters/hidpi-backdrop-filter-rasterization-scale.html: Added.
* Source/WebCore/platform/graphics/ca/cocoa/WebTiledBackingLayer.mm:
(-[WebTiledBackingLayer createTileController:]):
(-[WebTiledBackingLayer setContentsScale:]):

Canonical link: https://commits.webkit.org/277370@main